refactor: 레이싱 게임 수정